fixed edistep spacing bug.

--- a/src/app/Carv2.css
+++ b/src/app/Carv2.css
@@ -308,7 +308,6 @@ textarea::selection {
 }
 
 .controllPanelEditChild {
-  margin-left: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
